2003-05-02  Murray Cumming  <murrayc@usa.net>

	* *.hg: Added namespace prefix to all StateType parameter types, 
	because there is one in Atk and in Gtk and that confuses Doxygen.
	* demos/gtk-demo/example_change_display.cc: Commented-out some unused
	method parameters, to avoid warnings.

2003-04-26  Gene Ruebsamen <gene@erachampion.com>
	
 	* docs/tutorial/gtkmm-tut.xml: Added a new appendix for win32
 	with the cygwin/command-line portion contributed by Cedric Gustin.
 	Created a new link from the Installation section to point to the new appendix.
 	Also fixed the filename of the tutorial in the "Contributing" section.
 	* docs/tutorial/figures/devcpp_project_options.png: Added new image for the new win32 appendix described above.
	
2003-04-22  Murray Cumming  <murrayc@usa.net>

	* Install headers in x.3 directories instead of .4 because I noticed
	that some are already there so it needed to be fixed, and, given the
	current build files, it was easier to choose .3 than .4 (it is based
	on the library names), and because it does not seem like such a bad
	idea.

2003-04-21  Murray Cumming  <murrayc@usa.net>

	* gtk/src/menushell.ccg: Added 
	GP_LIST_ITER(Glib::List_Cpp_Iterator<GtkListItem, ComboDropDownItem> 
	because the standard GP_LIST iterator seems to be useless. See bug
	#110206.
	
2003-04-21  Murray Cumming  <murrayc@usa.net>

	* examples/book/Makefile.am: Added idle directory.
	* configure.in: Added examples/book/idle/Makefile.

2003-03-30  Gene Ruebsamen <gene@erachampion.com>

	* examples/book/timeout/timerexample.[cc,h]: update examples to
	work with Gtkmm2.
	* examples/book/idle/idleexample.[cc,h]: create new idle directory and
	examples for Gtkmm2.
	* docs/tutorial/gtkmm-tut.xml: update the idle/timeout chapter for
	Gtkmm2 and modify to use the program listings in the examples/book/
	directories.
	
2003-04-21 Oli Kessler <ok@tor.ch>
       
         * gtk/gtk_docs_override.xml, fixed docu bug in the function
         gtk_window_set_default
	