@@ -194,9 +194,6 @@ GTKMM_DOXYGEN_INPUT_SUBDIRS([pango atk gdk gtk])
 # This will be much slower.
 GTKMM_ARG_ENABLE_FULLDOCS()
 
-# Check whether --enable-debug-refcounting was given.
-GTKMM_ARG_ENABLE_DEBUG_REFCOUNTING()
-
 # Evaluate the --enable-warnings=level option.
 GTKMM_ARG_ENABLE_WARNINGS()
 
@@ -251,6 +248,7 @@ AC_CONFIG_FILES([
     tests/dialog/Makefile
     tests/dialog_deletethis/Makefile
     tests/delete_cpp_child/Makefile
+    tests/menu_destruction/Makefile
     tests/scrolledwindow/Makefile
 
   examples/Makefile
