@@ -43,6 +43,7 @@ class Box;
 namespace Box_Helpers
 {
 
+//This may not have any data or virtual functions. See below.
 class Child : protected _GtkBoxChild
 {
 private:
@@ -106,6 +107,9 @@ struct EndElem : public Element
 
 #m4 include(list.m4)
   GP_LIST(BoxList,Box,GtkBox,Child,children)
+  //The standard iterator, instead of List_Cpp_Iterator,
+  //only works because Child is derived from _GtkBoxChild.
+  
   GP_LIST_FIND(get_widget)
   GP_LIST_CONTAINER_REMOVE(get_widget)
         // Non-standard
