@@ -34,7 +34,7 @@ namespace Gtk
 
 /** An item in a ComboDropDownList.
  * 
- * Items in a ComboDropDwonList inherit Item. Two signals are added.
+ * Items in a ComboDropDownList inherit Item. Two signals are added.
  *
  * @ingroup Widgets
  */
