@@ -128,48 +128,6 @@ void Container_Class::destroy_callback(GtkObject* self)
     g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(G_OBJECT(self)));
 #endif
 
-  /*  This happens in Gtk::Widget::dispose_vfunc() instead
-
-  //GLIBMM_LIFECYCLE
-  // We need to remove non-manage()ed widgets to prevent gtk_container_destroy() from destroying them.
-  // Contary to what we thought once, even non-floating (sunk) widgets are destroyed by gtk_container_destroy().
-
-  // foreach() probably can't cope well with the removal of children, so we'll
-  // store the list and iterate over it: foreach(SigC::slot(&Widget::unparent));
-  {
-    GList* const children = gtk_container_get_children((GtkContainer*)self);
-
-    for(GList* node = children; node != 0; node = node->next)
-    {
-      GtkWidget* cwidget = static_cast<GtkWidget*>(node->data);
-
-      //It is not managed()ed, then remove it, so that gtk_container_destroy() will not call gtk_widget_destroy() on it later.
-      Widget *const cppChild = dynamic_cast<Widget*>(
-          Glib::ObjectBase::_get_current_wrapper((GObject*)cwidget));
-
-      // cppChild might even be 0 if the object isn't wrapped by C++.
-      if(cppChild && !cppChild->is_managed_())
-      {
-        // Normally, we'd have to ref the child widget because
-        // gtk_container_remove() unrefs it.  But since we only remove
-        // non-managed objects here, the container just releases the
-        // reference it has acquired before in gtk_container_add().
-
-#ifdef GLIBMM_DEBUG_REFCOUNTING
-        g_warning("Container_Class::destroy_callback() removing child: gobject_=%10X\n", cwidget);
-        if(cwidget)
-          g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(G_OBJECT(cwidget)));
-#endif
-
-        gtk_container_remove((GtkContainer*) self, cwidget);
-      }
-    }
-
-    g_list_free(children);
-  }
-
-  */
-
   //Call the normal C destroy implementation, such as gtk_button_destroy:
   //This will chain to gtk_container_destroy(), which will gtk_widget_destroy() any remaining child widgets.
   GtkObjectClass *const base = static_cast<GtkObjectClass*>(
