@@ -22,9 +22,7 @@ _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/container_p.h)
 _PINCLUDE(gtkmm/menu.h)
 _PINCLUDE(gtkmm/menubar.h)
-//_PINCLUDE(gtkmm/label.h)
 _PINCLUDE(gtkmm/window.h)
-//_PINCLUDE(gtkmm/accelgroup.h)
 
 #include <gtkmm/container.h>
 #include <gtkmm/menu_elems.h>
