@@ -263,15 +263,6 @@ protected:
   GtkNotebook* gparent_;
 };
 
-/* Dunno how this could be useful here */
-/*#m4 include(list.m4)
-  GP_LIST(PageList,Notebook,GtkNotebook,Page,children)
-  GP_LIST_CONTAINER_REMOVE(get_child)
-        // Non-standard
-  void reorder(iterator loc, iterator page);
-  GP_LIST_FIND(get_child)
-  GP_LIST_END()*/
-
 } /* Notebook_Helpers */
 
 /** Container which shows one of its children at a time, in tabbed windows.
