@@ -89,7 +89,7 @@ void Object::_destroy_c_instance()
   #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::_destroy_c_instance() this=%10X, gobject_=%10X\n", this, gobject_);
     if(gobject_)
-      g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
+      g_warning("  gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
   #endif
 
   cpp_destruction_in_progress_ = true;
@@ -183,7 +183,7 @@ void Object::disconnect_cpp_wrapper()
   #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Gtk::Object::disconnect_cpp_wrapper() this=%10X, gobject_=%10X\n", this, gobject_);
     if(gobject_)
-      g_warning("gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
+      g_warning("  gtypename: %s\n", G_OBJECT_TYPE_NAME(gobject_));
   #endif
 
   if(gobj())
