@@ -39,6 +39,18 @@ OptionMenu::OptionMenu()
   signal_realize().connect(SigC::slot(*this, &OptionMenu::init_accels_handler_));
 }
 
+OptionMenu::~OptionMenu()
+{
+  //GTKMM_LIFECYCLE
+  //Remove the menu so that the Menu forgets about this OptionMenu.
+  //Normally the GtkOptionMenu just destroys the Menu (see gtk_option_menu_destroy),
+  //but we prevent premature destruction in general for all widgets,
+  //so the Menu would survive and remember a dead GtkOptionMenu.
+  remove_menu();
+
+  destroy_();
+}
+
 void OptionMenu::init_accels_handler_(void)
 {
   // TODO: We need a way to tell sigc++ to disconnect all object slots
