@@ -43,8 +43,9 @@ class OptionMenu : public Button
 public:
 
   OptionMenu();
+  _CUSTOM_DTOR()
   
-  _WRAP_METHOD(void set_menu(Menu& menu),gtk_option_menu_set_menu)
+  _WRAP_METHOD(void set_menu(Menu& menu), gtk_option_menu_set_menu)
   _WRAP_METHOD(Menu* get_menu(), gtk_option_menu_get_menu)
   _WRAP_METHOD(const Menu* get_menu() const, gtk_option_menu_get_menu)
   _WRAP_METHOD(void remove_menu(), gtk_option_menu_remove_menu)
