@@ -75,6 +75,9 @@ protected:
 
 #m4 include(list.m4)
   GP_LIST(TableList,Table,GtkTable,Child,children)
+  //The standard iterator, instead of List_Cpp_Iterator,
+  //only works because Child is derived from _GtkTableChild.
+
   GP_LIST_ELEM(Widget)
   GP_LIST_NOINSERT()
   GP_LIST_CONTAINER_REMOVE()
