@@ -216,6 +216,9 @@ struct RadioElem : public Element
 *********************************************************************/
 #m4 include(list.m4)
   GP_LIST(ToolList,Toolbar,GtkToolbar,Tool,children)
+  //The standard iterator, instead of List_Cpp_Iterator,
+  //only works because Child is derived from GtkToolbarChild.
+
   virtual void remove(Widget& widget);
   GP_LIST_FIND(get_widget)
   GP_LIST_END()
