@@ -1,5 +1,6 @@
 test_dirs = child_widget child_widget2 child_widget_managed \
             refcount_dialog dialog dialog_deletethis delete_cpp_child \
+            menu_destruction \
             scrolledwindow
 
 SUBDIRS = $(test_dirs)
