@@ -1,3 +1,10 @@
+2003-05-06  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/optionmenu.[hg|ccg]: Implemented a custom destructor which
+	calls remove_menu(), to prevent the menu (set with set_menu()), from
+	remembering a dead OptionMenu. See the comment in the destructor for
+	more details.
+	
 2003-05-02  Murray Cumming  <murrayc@usa.net>
 
 	* *.hg: Added namespace prefix to all StateType parameter types, 
